Fixed a bug with down arrow not scrolling. Fixed issue with words wrapping while sliding onto the screen

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -110,6 +110,7 @@ h4
   height: 100px
   overflow: hidden
   position: relative
+  white-space: nowrap
   @media(min-height: 1600px)
     margin-bottom: 200px
   .slide
@@ -123,9 +124,7 @@ h4
 
 .social
   margin: 0 8px
-  @media (max-width: 550px)
-    margin-top: 24px
-  @media (max-height: 700px)
+  @media (max-height: 725px)
     display: none
     visibility: hidden
 
